# pipmaster

./: .gitignore  README.md  dev-requirements.txt  pyproject.toml  requirements.txt  setup.py
docs/: api.rst  changelog.rst  conf.py  contributing.rst  getting_started.rst  index.rst  requirements.txt  usage.rst
docs/_autosummary/: pipmaster.pipmaster.async_package_manager.rst  pipmaster.pipmaster.package_manager.rst  pipmaster.pipmaster.rst  pipmaster.rst
docs/api/: async.rst  index.rst  sync.rst
docs/user_guide/: async.rst  async_versions.rst  checking.rst  cli.rst  core_concepts.rst  dry_run.rst  environments.rst  index.rst  installing.rst  uninstalling.rst  uv.rst  vulnerabilities.rst
examples/: advanced_usage.py  create_specific_venv.py  run_me.py  test_vcs.py
pipmaster/: __init__.py  async_package_manager.py  backends.py  convenience.py  core.py  factories.py  package_manager.py  portable_python.py
pipmaster/cli/: main.py
tests/: test_async_package_manager.py  test_package_manager.py  test_uvx.py  unit_tests.py
workflows/: docs.yml
