[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pipmaster"
dynamic = ["version"]
authors = [
  { name="ParisNeo", email="parisneoai@gmail.com" }
]
description = "A versatile Python package manager utility for simplifying package installation, updates, checks, and environment management."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["pip", "package manager", "installer", "dependency", "venv", "environment"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Software Distribution",
    "Typing :: Typed",
]
dependencies = [
    "packaging>=21.0",
    "ascii_colors>=0.8.0"
]
license = "Apache-2.0"
license-files = ["LICENSE"]  # <-- MOVE IT HERE INSIDE [project]!!

[project.optional-dependencies]
audit = ["pip-audit>=2.5.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.20",
    "pip-audit>=2.5.0",
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
    "myst-parser>=0.17",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
all = [
    "pipmaster[audit]",
    "pipmaster[dev]",
]

[project.urls]
Homepage = "https://github.com/ParisNeo/pipmaster"
Repository = "https://github.com/ParisNeo/pipmaster"
Issues = "https://github.com/ParisNeo/pipmaster/issues"

[tool.setuptools.dynamic]
version = {attr = "pipmaster.__version__"}

[tool.setuptools.packages.find]
exclude = ["tests*", "examples*", "docs*"]

[tool.ruff]
line-length = 88
select = ["E", "W", "F", "I", "B", "C4", "UP", "ASYNC"]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
